# web-dev-patterns

./: CLAUDE.md  README.md  env.example  requirements.txt
examples/: README.md
examples/authentication/: .env.example  README.md  main.py  pyproject.toml
examples/eidosui-components/: main.py  pyproject.toml
examples/google_oauth/: .env.example  README.md  main.py  pyproject.toml
examples/mux-live/: .env.example  README.md  main.py  mux_repo.md  plan.md  pyproject.toml  todos.md
examples/mux-live/static/: player.js
examples/stripe/: .env.example  README.md  main.py  pyproject.toml
examples/uv-setup/: .env.example  .gitignore  README.md  main.py  pyproject.toml
fastapi-starter/: main.py
fastapi-starter/templates/: base.html  login.html  premium.html  profile.html  subscribe.html  success.html  todos.html
